Displayed data on graphs

--- a/Project Work/templates/base.html
+++ b/Project Work/templates/base.html
@@ -6,6 +6,7 @@
             <link rel="stylesheet" href="{{ url_for('static', filesname='css/main.css') }}">
         {% endblock %}
         {% block script %}
+        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
         {% endblock %}
     </head>
     <body>
