Added dropdown menu

--- a/Project Work/templates/index.html
+++ b/Project Work/templates/index.html
@@ -281,38 +281,7 @@
               closeAllLists(e.target);
             });
           }
-          var companies = [
-            "BAJAJFINSV",
-            "TCS",
-            "LT",
-            "TECHM",
-            "BRITANNIA",
-            "SHREECEM",
-            "ONGC",
-            "BAJAJ-AUTO",
-            "ICICIBANK",
-            "COALINDIA",
-            "GRASIM",
-            "HEROMOTOCO",
-            "ULTRACEMCO",
-            "TATACONSUM",
-            "NESTLEIND",
-            "HINDALCO",
-            "BAJFINANCE",
-            "MARUTI",
-            "INDUSINDBK",
-            "TATASTEEL",
-            "TITAN",
-            "MM",
-            "CIPLA",
-            "ITC",
-            "HDFCLIFE",
-            "WIPRO",
-            "KOTAKBANK",
-            "NTPC",
-            "RELIANCE",
-            "BHARTIARTL",
-          ];
+          var companies =["BAJAJ FINSERV", "TCS",  "L&T", "TECH MAHINDRA", "BRITANNIA", "SHREE CEMENT" , "ONGC", "BAJAJ AUTO", "ICICI BANK", "COAL INDIA", "GRASIM" , "HERO MOTOCORP" ,"ULTRATECH CEMENT" ,"TATA CONSUMER" ,"NESTLE", "HINDALCO" , "BAJAJ FINANCE" , "MARUTI SUZUKI" , "INDUSIND BANK", "TATA STEEL" , "TITAN", "CIPLA" , "ITC" , "HDFC LIFE INSURANCE" , "WIPRO" , "KOTAK MAHINDRA BANK" ,"NTPC" , "RELIANCE IND.", "BHARTI AIRTEL","YES BANK","IDBI BANK","IDEA","RELIANCE COMMUNICATION","TATA MOTORS","BANK OF BARODA","STATE BANK OF INDIA","TATA POWER","GAIL LTD.","NANDAN DENIM LTD.","SENSEX","NIFT 50","DOW","PUNJAB NATIONAL BANK","VIVO BIO TECH","APPLE","AMAZON","FACEBOOK","GOOGLE","LOREAL", "UNILEVER","P&G","MICROSOFT","RAYMOND","PHILIPS","TESLA","SONY","NOKIA"];
           autocomplete(document.getElementById("name"), companies);
         </script>
         <!--Shreeya modified-->
